--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "aos": "^2.3.4",
+    "axios": "^1.7.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
