--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^7.13.0",
     "aos": "^2.3.4",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
